# Whisper_Transcribe

./: audio_streamlit.py  pyproject.toml
